--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,10 @@
 body{
    font-family: "DM Sans", sans-serif;
 }
+@theme {
+   --color-background: #E9F6FF
+
+}
 
 
 @theme inline {
@@ -47,6 +51,10 @@ body{
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+    --color-prime-background: #E9F6FF;
+    --color-prime-blue: #007DD0;
+    --color-prime-text: #252525;
+    --color-second-text:#626262;
 }
 
 :root {
@@ -82,6 +90,7 @@ body{
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+ 
 }
 
 .dark {
